--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>React Props</title>
   </head>
-  <body>
-    <div id="root"></div>
+  <body class="antialiased text-slate-400 bg-slate-900">
+    <div id="root" class="font-serif"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
