--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ReactiveX</title>
   </head>
-  <body class="antialiased text-slate-400 bg-slate-900">
+  <body
+    class="antialiased text-slate-300 bg-gradient-to-r from-slate-900 to-slate-900"
+  >
     <div id="root" class="font-serif"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
